@@ -98,6 +98,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       DPDK: don't enable it by default.
       Update Npcap SDK to 1.15.
       autogen.sh: Allow to configure Autoconf warnings.
+      autogen.sh: Delete all trailing blank lines at end of configure.
 
 Friday, August 30, 2024 / The Tcpdump Group
   Summary for 1.10.5 libpcap release
